WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
318878
REGRESSION (Safari 26.5.2): Random page crashes due to invalid IPC message WebResourceLoader_WillSendRequestReply
https://bugs.webkit.org/show_bug.cgi?id=318878
Summary
REGRESSION (Safari 26.5.2): Random page crashes due to invalid IPC message We...
pieter-jan
Reported
2026-07-08 10:21:25 PDT
After updating to MacOS/iOS 26.5.2 I have noticed that several websites randomly crashed with the error message "A problem repeatedly occurred with <sitename>. Visually the page would load just fine but then crash. This happened on a MacBookPro M3, MacOS 26.5.2, iPhone SE 2nd gen iOS 26.5.2, both with Safari and Ecosia browser. Sometimes the same site would work, but other times it wouldn't. After debugging, all sites that crash have a pattern of the following logging: 2026-07-08 18:22:22.402336+0200 0x11a22d Fault 0x854915 69220 14 com.apple.WebKit.Networking: (WebKit) [com.apple.WebKit:IPC] /AppleInternal/Library/BuildRoots/4~CSjpugCypH81GiRiC7qjc7h_Ls9vYj2Av51m9vQ/Library/Caches/com.apple.xbs/TemporaryDirectory.QSy8hj/Sources/WebKit/Source/WebKit/NetworkProcess/NetworkResourceLoader.cpp 1450: Invalid message dispatched auto WebKit::NetworkResourceLoader::continueWillSendRedirectedRequest(ResourceRequest &&, ResourceRequest &&, ResourceResponse &&, std::optional<WebCore::PCM::AttributionTriggerData> &&, CompletionHandler<void (WebCore::ResourceRequest &&)> &&)::(anonymous class)::operator()(ResourceRequest &&, bool) 2026-07-08 18:22:22.402420+0200 0x11a22d Error 0x0 69220 0 com.apple.WebKit.Networking: (WebKit) [com.apple.WebKit:Network] 0x10f235000 - [pageProxyID=5255, webPageID=5309, frameID=4294967812, resourceID=357, isMainResource=0, destination=0, isSynchronous=0] NetworkResourceLoader::didFailLoading: (wasServiceWorkerLoad=0, isTimeout=0, isCancellation=1, isAccessControl=0, errorCode=-999) 2026-07-08 18:22:22.402452+0200 0x11a22d Default 0x0 69220 0 com.apple.WebKit.Networking: (WebKit) [com.apple.WebKit:Network] 0x10f235000 - [pageProxyID=5255, webPageID=5309, frameID=4294967812, resourceID=357, isMainResource=0, destination=0, isSynchronous=0] NetworkResourceLoader::cleanup: (result=2) 2026-07-08 18:22:22.402504+0200 0x11a22d Activity 0x854916 69220 0 com.apple.WebKit.Networking: (libsystem_trace.dylib) Activity for state dumps 2026-07-08 18:22:22.402503+0200 0x11a22d Fault 0x854916 69220 14 com.apple.WebKit.Networking: (WebKit) [com.apple.WebKit:IPC] Received an invalid message 'WebResourceLoader_WillSendRequestReply' from WebContent process 977, requesting for it to be terminated. 2026-07-08 18:22:22.402547+0200 0x11a22d Default 0x0 69220 0 com.apple.WebKit.Networking: (WebKit) [com.apple.WebKit:Loading] 0x10e0923c0 - [webProcessIdentifier=977] NetworkConnectionToWebProcess::removeLoadIdentifier: Removing identifier 364 and aborting corresponding loader 2026-07-08 18:22:22.402557+0200 0x11a22d Default 0x0 69220 0 com.apple.WebKit.Networking: (WebKit) [com.apple.WebKit:Network] 0x10f227800 - [pageProxyID=5255, webPageID=5309, frameID=4294967812, resourceID=364, isMainResource=0, destination=0, isSynchronous=0] NetworkResourceLoader::abort: (hasNetworkLoad=1) 2026-07-08 18:22:22.402563+0200 0x11a22d Default 0x0 69220 0 com.apple.WebKit.Networking: (WebKit) [com.apple.WebKit:Network] 0x10f227800 - [pageProxyID=5255, webPageID=5309, frameID=4294967812, resourceID=364, isMainResource=0, destination=0, isSynchronous=0] NetworkResourceLoader::abort: Keeping network load alive due to keepalive option This happens all the time a page/site is crashing. Seems that this bug was introduced during the 26.5.2 update as other mac/ios devices on 26.5 and 26.5.1 do not experience this. It happens for most sites where ads / tracking elements are used, eg frequently. Hence my severity critical My workaround: use an adblocker premium to prevent the cross-loading
Attachments
Add attachment
proposed patch, testcase, etc.
pieter-jan
Comment 1
2026-07-08 10:30:29 PDT
Should be needed, I have several outputs of the command log stream --level error --predicate 'process == "com.apple.WebKit.Networking" OR process == "com.apple.WebKit.WebContent"' available
Radar WebKit Bug Importer
Comment 2
2026-07-08 16:25:05 PDT
<
rdar://problem/181753576
>
kzar
Comment 3
2026-07-10 08:51:28 PDT
If it helps, I made a simple reproduction case:
https://testpages.kzar.co.uk/beacon-redirect-block/
. The tracking request to `
https://eviltracker.net
` needs to be blocked for the crash to be triggered, for example if you load the page with the DuckDuckGo browser that request will be blocked and therefore the tab crashes.
rupin
Comment 4
2026-07-13 14:05:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/69298
rupin
Comment 5
2026-07-13 14:19:03 PDT
Thank you for the reproduction case! I was able to reproduce the crash with
https://testpages.kzar.co.uk/beacon-redirect-block/
on the DuckDuckGo MacOS browser using tip-of-tree WebKit and I've confirmed that the fix I posted above (
https://github.com/WebKit/WebKit/pull/69298
) makes the crash go away.
kzar
Comment 6
2026-07-13 14:25:42 PDT
Amazing that was quick, thanks for fixing that!
rupin
Comment 7
2026-07-13 16:04:07 PDT
Happy to help!
EWS
Comment 8
2026-07-20 16:54:48 PDT
Committed
317582@main
(524399615e24): <
https://commits.webkit.org/317582@main
> Reviewed commits have been landed. Closing PR #69298 and removing active labels.
EWS
Comment 9
2026-07-21 05:29:59 PDT
Committed
316606.132@safari-7625-branch
(7c8584b727b0): <
https://commits.webkit.org/316606.132@safari-7625-branch
> Reviewed commits have been landed. Closing PR #5965 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug